--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
           "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
           "react/jsx-indent": 0,
           "linebreak-style": 0,
-          "react/jsx-indent-props": 0
+          "react/jsx-indent-props": 0,
+          "no-nested-ternary": 0
       }
   }
