--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.2.2",
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.19.0",
     "react-native-textinput-effects": "^0.4.2",
-    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
