--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "react-native-textinput-effects": "^0.4.2",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
+    "react-redux-firebase": "^2.0.4",
     "redux": "^3.7.2",
+    "redux-persist": "5.6.12",
+    "redux-persist-expo-securestore": "^1.0.0",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.1.5"
   }
