--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.2.2",
+    "axios": "^0.18.0",
+    "exp": "^52.0.0",
     "expo": "^25.0.0",
     "firebase": "^4.9.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.19.0",
+    "react-native-md5": "^1.0.0",
     "react-native-textinput-effects": "^0.4.2",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
