--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
           "semi": 1,
           "no-tabs": 0,
           "no-console": 0,
+          "indent": [2, 4],
           "no-shadow": 0,
           "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
           "react/jsx-indent": 0,
