--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
           "react/jsx-indent": 0,
           "linebreak-style": 0,
           "react/jsx-indent-props": 0,
-          "no-nested-ternary": 0
+          "no-nested-ternary": 0,
+          "react/prop-types": 0
       }
   }
