--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo": "^25.0.0",
     "firebase": "^4.9.1",
     "react": "16.2.0",
+    "react-motion": "^0.5.2",
     "react-native": "0.52.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.19.0",
