Added More Options

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "exp": "^52.0.0",
     "expo": "^25.0.0",
     "firebase": "^4.9.1",
+    "moment": "^2.22.1",
     "react": "16.2.0",
+    "react-moment": "^0.7.0",
     "react-motion": "^0.5.2",
     "react-native": "0.52.0",
     "react-native-material-textfield": "^0.12.0",
