--- a/package.json
+++ b/package.json
@@ -38,14 +38,15 @@
     "react-moment": "^0.7.0",
     "react-motion": "^0.5.2",
     "react-native": "0.52.0",
+    "react-native-dialog-component": "^0.2.17",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.19.0",
     "react-native-md5": "^1.0.0",
     "react-native-modalbox": "^1.4.2",
+    "react-native-simple-dialogs": "^0.3.1",
     "react-native-textinput-effects": "^0.4.2",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
-    "react-redux-firebase": "^2.0.4",
     "redux": "^3.7.2",
     "redux-persist": "5.6.12",
     "redux-persist-expo-securestore": "^1.0.0",
