--- a/.eslintrc
+++ b/.eslintrc
@@ -1,30 +1,17 @@
 {
-  "extends": [
-    "airbnb",
-  ],
+  "extends": ["airbnb", "prettier", "prettier/react"],
   "parser": "babel-eslint",
-  "plugins": [
-    "react",
-    "jsx-a11y",
-    "import",
-  ],
+  "plugins": ["react", "jsx-a11y", "import", "prettier"],
   "rules": {
     "comma-dangle": 0,
     "semi": 1,
     "no-tabs": 0,
     "no-console": 0,
-    "indent": [
-      2,
-      4
-    ],
     "no-shadow": 0,
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
+        "extensions": [".js", ".jsx"]
       }
     ],
     "react/jsx-indent": 0,
@@ -32,6 +19,13 @@
     "react/jsx-indent-props": 0,
     "no-nested-ternary": 0,
     "react/prop-types": 0,
-    "import/no-unresolved": 0
+    "import/no-unresolved": 0,
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "parser": "flow"
+      }
+    ]
   }
 }
