--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "flow-bin": "^0.56.0",
+    "husky": "^0.14.3",
     "jest-expo": "25.0.0",
+    "lint-staged": "^7.0.4",
     "prettier": "^1.12.1",
     "pretty-quick": "^1.4.1",
     "react-native-scripts": "1.11.1",
