--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "node node_modules/jest/bin/jest.js",
     "lint": "eslint src/",
     "flow": "flow",
-    "precommit": "pretty-quick --stage"
+    "precommit": "pretty-quick --stage",
+    "prettier": "prettier --write src/**/*.js"
   },
   "jest": {
     "preset": "jest-expo"
