--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "khataApp",
-  "version": "0.1.0",
+  "name": "khata",
+  "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.16.0",
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.6.1",
-    "flow-bin": "^0.56.0",
+    "eslint-plugin-react": "^7.7.0",
+    "exp": "^53.0.0",
+    "flow-bin": "^0.70.0",
     "husky": "^0.14.3",
-    "jest-expo": "25.0.0",
-    "lint-staged": "^7.0.4",
+    "jest-expo": "^26.0.0",
+    "lint-staged": "^7.0.5",
     "prettier": "^1.12.1",
     "pretty-quick": "^1.4.1",
-    "react-native-scripts": "1.11.1",
-    "react-test-renderer": "16.2.0"
+    "react-native-scripts": "1.13.2",
+    "react-test-renderer": "16.3.0-alpha.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -28,37 +29,26 @@
     "ios": "react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js",
     "lint": "eslint src/",
-    "flow": "flow",
-    "precommit": "pretty-quick --stage",
-    "prettier": "prettier --write src/**/*.js"
+    "flow": "flow"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.2.2",
-    "axios": "^0.18.0",
-    "exp": "^52.0.0",
-    "expo": "^25.0.0",
-    "firebase": "^4.9.1",
+    "@expo/vector-icons": "^6.3.1",
+    "expo": "^26.0.0",
+    "firebase": "^4.13.1",
     "moment": "^2.22.1",
-    "react": "16.2.0",
-    "react-moment": "^0.7.0",
+    "react": "16.3.0",
     "react-motion": "^0.5.2",
-    "react-native": "0.52.0",
-    "react-native-dialog-component": "^0.2.17",
-    "react-native-material-textfield": "^0.12.0",
-    "react-native-material-ui": "^1.19.0",
+    "react-native": "~0.54.1",
+    "react-native-material-ui": "^1.22.3",
     "react-native-md5": "^1.0.0",
-    "react-native-modalbox": "^1.4.2",
-    "react-native-simple-dialogs": "^0.3.1",
     "react-native-textinput-effects": "^0.4.2",
-    "react-navigation": "^1.0.0-beta.27",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-persist": "5.6.12",
-    "redux-persist-expo-securestore": "^1.0.0",
-    "redux-saga": "^0.16.0",
-    "styled-components": "^3.1.5"
+    "react-navigation": "^1.5.11",
+    "react-navigation-redux-helpers": "^1.0.5",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0"
   }
 }
