--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
 	 "permissions": []
    },
    "splash": {
-	 "backgroundColor": "#e3e3e3"
+    "backgroundColor": "#2c3e50",
+    "hdpi": "./src/assets/images/wallet.png",
+    "resizeMode": "contain"
    }
   }
 }
