--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@expo/vector-icons": "^6.3.1",
     "expo": "^26.0.0",
     "firebase": "^4.13.1",
+    "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "react": "16.3.0",
     "react-motion": "^0.5.2",
