--- a/app.json
+++ b/app.json
@@ -1,25 +1,23 @@
 {
   "expo": {
-   "name": "Khata",
-   "icon": "./src/assets/images/khata-icon.png",
-   "version": "1.0.0",
-   "slug": "khata-app",
-   "sdkVersion": "26.0.0",
-   "platforms": ["ios", "android"],
-   "orientation": "portrait",
-   "androidStatusBarColor": "#054251",
-   "ios": {
-	 "bundleIdentifier": "com.crumet.khataapp"
-   },
-   "android": {
-	 "package": "com.crumet.khataapp",
-	 "versionCode": 1,
-   "permissions": []
-   },
-   "splash": {
-      "backgroundColor": "#054757",
-      "image": "./src/assets/images/splash-screen.png",
-      "resizeMode": "contain"
+    "name": "Khata",
+    "icon": "./src/assets/images/khata-icon.png",
+    "version": "1.0.1",
+    "slug": "khata-app",
+    "sdkVersion": "26.0.0",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "orientation": "portrait",
+    "androidStatusBarColor": "#054251",
+    "ios": {
+      "bundleIdentifier": "com.crumet.khataapp"
+    },
+    "android": {
+      "package": "com.crumet.khataapp",
+      "versionCode": 1,
+      "permissions": []
     }
   }
 }
